test/chainsaw/netpol_unmanaged_egress/00-assert-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-postgres
status:
  readyReplicas: 1
